fix
link not showing up, trying to fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@
 
 a.gear {
 	background-color: gray;
+	color: black;
 }
 
 /* http://www.w3schools.com/tags/ref_colorpicker.asp */
